--- a/kubemarine/resources/configurations/globals.yaml
+++ b/kubemarine/resources/configurations/globals.yaml
@@ -208,6 +208,10 @@ compatibility_map:
         version_rhel: 19.03*
         version_rhel8: 19.03*
         version_debian: 5:20.10.*
+      v1.23.17:
+        version_rhel: 19.03*
+        version_rhel8: 19.03*
+        version_debian: 5:20.10.*        
       v1.24.0:
         version_rhel: 19.03*
         version_rhel8: 19.03*
@@ -224,6 +228,10 @@ compatibility_map:
         version_rhel: 19.03*
         version_rhel8: 19.03*
         version_debian: 5:20.10.*
+      v1.25.7:
+        version_rhel: 19.03*
+        version_rhel8: 19.03*
+        version_debian: 5:20.10.*        
     containerd:
       v1.21.2:
         version_rhel: 1.4*
@@ -249,6 +257,9 @@ compatibility_map:
       v1.23.11:
         version_rhel8: 1.4*
         version_debian: 1.5.*
+      v1.23.17:
+        version_rhel8: 1.4*
+        version_debian: 1.5.*        
       v1.24.0:
         version_rhel8: 1.4*
         version_debian: 1.5.*
@@ -259,6 +270,9 @@ compatibility_map:
         version_rhel8: 1.4*
         version_debian: 1.5.*
       v1.25.2:
+        version_rhel8: 1.4*
+        version_debian: 1.5.*
+      v1.25.7:
         version_rhel8: 1.4*
         version_debian: 1.5.*
     containerdio:
@@ -294,6 +308,10 @@ compatibility_map:
         version_rhel: 1.6*
         version_rhel8: 1.6*
         version_debian: 1.5.*
+      v1.23.17:
+        version_rhel: 1.6*
+        version_rhel8: 1.6*
+        version_debian: 1.5.*
       v1.24.0:
         version_rhel: 1.6*
         version_rhel8: 1.6*
@@ -307,6 +325,10 @@ compatibility_map:
         version_rhel8: 1.6*
         version_debian: 1.5.*
       v1.25.2:
+        version_rhel: 1.6*
+        version_rhel8: 1.6*
+        version_debian: 1.5.*
+      v1.25.7:
         version_rhel: 1.6*
         version_rhel8: 1.6*
         version_debian: 1.5.*
@@ -343,6 +365,10 @@ compatibility_map:
         version_rhel: 1.6.4*
         version_rhel8: "*"
         version_debian: "*"
+      v1.23.17:
+        version_rhel: 1.6.4*
+        version_rhel8: "*"
+        version_debian: "*"
       v1.24.0:
         version_rhel: 1.6.4*
         version_rhel8: "*"
@@ -356,6 +382,10 @@ compatibility_map:
         version_rhel8: "*"
         version_debian: "*"
       v1.25.2:
+        version_rhel: 1.6.4*
+        version_rhel8: "*"
+        version_debian: "*"
+      v1.25.7:
         version_rhel: 1.6.4*
         version_rhel8: "*"
         version_debian: "*"
@@ -392,6 +422,10 @@ compatibility_map:
         version_rhel: 1.8*
         version_rhel8: 1.8*
         version_debian: 2.*
+      v1.23.17:
+        version_rhel: 1.8*
+        version_rhel8: 1.8*
+        version_debian: 2.*
       v1.24.0:
         version_rhel: 1.8*
         version_rhel8: 1.8*
@@ -405,6 +439,10 @@ compatibility_map:
         version_rhel8: 1.8*
         version_debian: 2.*
       v1.25.2:
+        version_rhel: 1.8*
+        version_rhel8: 1.8*
+        version_debian: 2.*
+      v1.25.7:
         version_rhel: 1.8*
         version_rhel8: 1.8*
         version_debian: 2.*
@@ -441,6 +479,10 @@ compatibility_map:
         version_rhel: 1.3*
         version_rhel8: 2.1*
         version_debian: 1:2.*
+      v1.23.17:
+        version_rhel: 1.3*
+        version_rhel8: 2.1*
+        version_debian: 1:2.*
       v1.24.0:
         version_rhel: 1.3*
         version_rhel8: 2.1*
@@ -454,6 +496,10 @@ compatibility_map:
         version_rhel8: 2.1*
         version_debian: 1:2.*
       v1.25.2:
+        version_rhel: 1.3*
+        version_rhel8: 2.1*
+        version_debian: 1:2.*
+      v1.25.7:
         version_rhel: 1.3*
         version_rhel8: 2.1*
         version_debian: 1:2.*
@@ -482,6 +528,9 @@ compatibility_map:
       v1.23.11:
         version: v1.23.0
         sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
+      v1.23.17:
+        version: v1.23.0
+        sha1: 332001091d2e4523cbe8d97ab0f7bfbf4dfebda2
       v1.24.0:
         version: v1.25.0
         sha1: b3a24e549ca3b4dfd105b7f4639014c0c508bea3 
@@ -493,7 +542,10 @@ compatibility_map:
         sha1: b3a24e549ca3b4dfd105b7f4639014c0c508bea3 
       v1.25.2:
         version: v1.25.0
-        sha1: b3a24e549ca3b4dfd105b7f4639014c0c508bea3 
+        sha1: b3a24e549ca3b4dfd105b7f4639014c0c508bea3
+      v1.25.7:
+        version: v1.25.0
+        sha1: b3a24e549ca3b4dfd105b7f4639014c0c508bea3
     kubeadm:
       v1.21.2:
         sha1: cbb07d380de4ef73d43d594a1055839fa9753138
@@ -518,7 +570,7 @@ compatibility_map:
       v1.24.2:
         sha1: 65c3e96dc54e7f703bf1ea9c6e5573dca067f726
       v1.24.11:
-        sha1: 7d44b41e36ff71f5f00671d518f2e59b4540653a
+        sha1: a60b0adcdc6f19e79bd98663914b694a325db819
       v1.25.2:
         sha1: 72b87eedc9701c1143126f4aa7375b91fc9d46fc
       v1.25.7:
@@ -547,7 +599,7 @@ compatibility_map:
       v1.24.2:
         sha1: 35c3d20f92c8159b4f65aaafe6e9fc57c9f9e308
       v1.24.11:
-        sha1: 3f332cbeed2f09b5275d56872bb8adcf54c9c98d
+        sha1: ce74875b3802f4a9ac5dbd32a3f4c684b9ee4fd3
       v1.25.2:
         sha1: afdc009cd59759626ecce007667f42bf42e7c1be 
       v1.25.7:
@@ -576,7 +628,7 @@ compatibility_map:
       v1.24.2:
         sha1: d2a8e78bcdc992addd6faccb27b0af5d533443fa
       v1.24.11:
-        sha1: 3f5d977d9ec38937ecf1dc9ccc3d0f0e48b88655
+        sha1: 5fdcf3741992427698444a75a7f27a6d6c4a22ab
       v1.25.2:
         sha1: b12c0e102df89cd0579c8a3c769988aaf5dbe4ba
       v1.25.7:
