--- a/kubemarine/resources/configurations/globals.yaml
+++ b/kubemarine/resources/configurations/globals.yaml
@@ -9,6 +9,8 @@ kubernetes_versions:
     supported: true
   v1.25:
     supported: true
+  v1.26:
+    supported: true
 
 connection:
   defaults:
@@ -223,7 +225,11 @@ compatibility_map:
       v1.25.7:
         version_rhel: 19.03*
         version_rhel8: 19.03*
-        version_debian: 5:20.10.*        
+        version_debian: 5:20.10.*
+      v1.26.3:
+        version_rhel: 19.03*
+        version_rhel8: 19.03*
+        version_debian: 5:20.10.*
     containerd:
       v1.21.2:
         version_rhel: 1.4*
@@ -261,6 +267,9 @@ compatibility_map:
       v1.25.7:
         version_rhel8: 1.4*
         version_debian: 1.5.*
+      v1.26.3:
+        version_rhel8: 1.4*
+        version_debian: 1.6.*
     containerdio:
       v1.21.2:
         version_rhel: 1.6*
@@ -310,6 +319,10 @@ compatibility_map:
         version_rhel: 1.6*
         version_rhel8: 1.6*
         version_debian: 1.5.*
+      v1.26.3:
+        version_rhel: 1.6*
+        version_rhel8: 1.6*
+        version_debian: 1.6.*
     podman:
       v1.21.2:
         version_rhel: 1.6.4*
@@ -356,6 +369,10 @@ compatibility_map:
         version_rhel8: "*"
         version_debian: "*"
       v1.25.7:
+        version_rhel: 1.6.4*
+        version_rhel8: "*"
+        version_debian: "*"
+      v1.26.3:
         version_rhel: 1.6.4*
         version_rhel8: "*"
         version_debian: "*"
@@ -408,6 +425,10 @@ compatibility_map:
         version_rhel: 1.8*
         version_rhel8: 1.8*
         version_debian: 2.*
+      v1.26.3:
+        version_rhel: 1.8*
+        version_rhel8: 1.8*
+        version_debian: 2.*
     keepalived:
       v1.21.2:
         version_rhel: 1.3*
@@ -457,6 +478,10 @@ compatibility_map:
         version_rhel: 1.3*
         version_rhel8: 2.1*
         version_debian: 1:2.*
+      v1.26.3:
+        version_rhel: 1.3*
+        version_rhel8: 2.1*
+        version_debian: 1:2.*
     crictl:
       v1.21.2:
         version: v1.23.0
@@ -494,6 +519,9 @@ compatibility_map:
       v1.25.7:
         version: v1.25.0
         sha1: b3a24e549ca3b4dfd105b7f4639014c0c508bea3
+      v1.26.3:
+        version: v1.25.0
+        sha1: b3a24e549ca3b4dfd105b7f4639014c0c508bea3
     kubeadm:
       v1.21.2:
         sha1: cbb07d380de4ef73d43d594a1055839fa9753138
@@ -519,6 +547,8 @@ compatibility_map:
         sha1: 72b87eedc9701c1143126f4aa7375b91fc9d46fc
       v1.25.7:
         sha1: 4efb3da49a50d137b728f0529bedee458e8c5f86
+      v1.26.3:
+        sha1: 86e202f98d22c8fddcadda6656f6698d21eae6ca
     kubelet:
       v1.21.2:
         sha1: 024e458aa0f74cba6b773401b779590437812fc6
@@ -543,7 +573,9 @@ compatibility_map:
       v1.25.2:
         sha1: afdc009cd59759626ecce007667f42bf42e7c1be 
       v1.25.7:
-        sha1: ace8ce244896aca5d38c8184c44226660a09269a 
+        sha1: ace8ce244896aca5d38c8184c44226660a09269a
+      v1.26.3:
+        sha1: 5fe320fedaabb91d3770da19135412b7454bb28b
     kubectl:
       v1.21.2:
         sha1: 2c7a7de9fff41ac49f7c2546a9b1aff2c1d9c468
@@ -569,6 +601,8 @@ compatibility_map:
         sha1: b12c0e102df89cd0579c8a3c769988aaf5dbe4ba
       v1.25.7:
         sha1: a5b32c173670ee6fa7710d7158ea4a0d198c8af5
+      v1.26.3:
+        sha1: 56916d87c3caef05489db932fd9e48d32ebdf634
     calico:
       v1.21:
         version: v3.22.2
@@ -584,7 +618,10 @@ compatibility_map:
         sha1: c4de7a203e5a3a942fdf130bc9ec180111fc2ab6 
       v1.25:
         version: v3.24.2
-        sha1: c4de7a203e5a3a942fdf130bc9ec180111fc2ab6 
+        sha1: c4de7a203e5a3a942fdf130bc9ec180111fc2ab6
+      v1.26:
+        version: v3.24.2
+        sha1: c4de7a203e5a3a942fdf130bc9ec180111fc2ab6
     nginx-ingress-controller:
       v1.21:
         image-name: ingress-nginx/controller
@@ -608,6 +645,12 @@ compatibility_map:
         pod-name: ingress-nginx-controller
         webhook-image-name: ingress-nginx/kube-webhook-certgen
         webhook-version: v20220916-gd32f8c343
+      v1.26:
+        image-name: ingress-nginx/controller
+        version: v1.4.0
+        pod-name: ingress-nginx-controller
+        webhook-image-name: ingress-nginx/kube-webhook-certgen
+        webhook-version: v20220916-gd32f8c343
     kubernetes-dashboard:
       v1.21:
         version: v2.5.1
@@ -624,6 +667,9 @@ compatibility_map:
       v1.25:
         version: v2.7.0
         metrics-scraper-version: v1.0.8
+      v1.26:
+        version: v2.7.0
+        metrics-scraper-version: v1.0.8
     local-path-provisioner:
       v1.21:
         version: v0.0.22
@@ -634,6 +680,8 @@ compatibility_map:
       v1.24:
         version: v0.0.22
       v1.25:
+        version: v0.0.23
+      v1.26:
         version: v0.0.23
     busybox:
       v1.21:
@@ -646,6 +694,8 @@ compatibility_map:
         version: 1.34.1
       v1.25:
         version: 1.34.1
+      v1.26:
+        version: 1.34.1
     pause:
       v1.21:
         version: 3.4.1
@@ -657,6 +707,8 @@ compatibility_map:
         version: 3.7
       v1.25:
         version: 3.8
+      v1.26:
+        version: 3.9
 
   hardware:
     minimal:
