--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -660,6 +660,9 @@ plugins:
         namespace: kubernetes-dashboard
         annotations:
           nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+          nginx.ingress.kubernetes.io/configuration-snippet: |   
+            add_header X-Frame-Options "sameorigin";
+            add_header X-Content-Type-Options "nosniff";
       spec:
         ingressClassName: nginx
         tls:
