--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -663,6 +663,8 @@ plugins:
           nginx.ingress.kubernetes.io/configuration-snippet: |   
             add_header X-Frame-Options "sameorigin";
             add_header X-Content-Type-Options "nosniff";
+            more_set_headers "Content-Security-Policy: default-src 'self'; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline'; frame-ancestors 'self'; form-action 'self'";
+            more_set_headers "Cross-Origin-Resource-Policy: same-site"; 
       spec:
         ingressClassName: nginx
         tls:
