MANOPD-84415 MANOPD-86236 Plugin manifests enrichment by python (#381)
* Refactoring of calico apply step

Separate specific enrichment logic and common engine.

* Refactoring of yaml processing

Separate common logic for future processing of YAML manifests.

* Split engine and model

Add ability to add objects to manifest.

* Auto-update license header

* import original nginx-ingress-controller manifests

* Inline calico and nginx-ingress-controller sources to YAML

* nginx-ingress-controller python enrichment implementation

* Import original dashboard and local-path-provisioner manifests

* Inline dashboard and local-path-provisioner source links to YAML

* dashboard python enrichment implementation

* local-path-provisioner python enrichment implementation

* Auto-update license header

* Add missed manifest for local-path-provisioner v0.0.23

* local-path-provisioner source links to YAML

* Inline calico v3.22.2 source link to YAML

* Fix enrichment of 'calico-node' container env

* Implement unit tests for plugins on python

* Auto-update license header

* Do not validate after enrichment

* Implement patch that reinstalls Calico

* Auto-update license header

* Add hidden import in kubemarine.spec

---------

Co-authored-by: ilia1243 <ilia1243@users.noreply.github.com>

--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -416,11 +416,10 @@ plugins:
       priority: 0
       procedures:
         - python:
-            module: plugins/calico.py
-            method: apply_calico_yaml
+            module: plugins/builtin.py
+            method: apply_yaml
             arguments:
-              calico_original_yaml: 'plugins/yaml/calico-{{ plugins.calico.version }}.yaml.original'
-              calico_yaml: 'calico-{{ plugins.calico.version }}.yaml'
+              plugin_name: calico
         - expect:
             daemonsets:
               - calico-node
@@ -499,30 +498,10 @@ plugins:
       FELIX_LOGSEVERITYSCREEN: info
       FELIX_HEALTHENABLED: 'true'
       FELIX_USAGEREPORTINGENABLED: 'false'
-      FELIX_TYPHAK8SSERVICENAME:
-          configMapKeyRef:
-            name: calico-config
-            key: typha_service_name
       NODENAME:
           fieldRef:
             apiVersion: v1
             fieldPath: spec.nodeName
-      CALICO_NETWORKING_BACKEND:
-          configMapKeyRef:
-            name: calico-config
-            key: calico_backend
-      FELIX_IPINIPMTU:
-          configMapKeyRef:
-            name: calico-config
-            key: veth_mtu
-      FELIX_VXLANMTU:
-          configMapKeyRef:
-            name: calico-config
-            key: veth_mtu
-      FELIX_WIREGUARDMTU:
-          configMapKeyRef:
-            name: calico-config
-            key: veth_mtu
     cni:
       image: 'calico/cni:{{ plugins.calico.version }}'
       ipam:
@@ -569,7 +548,11 @@ plugins:
         - python:
             module: plugins/nginx_ingress.py
             method: manage_custom_certificate
-        - template: 'templates/plugins/nginx-ingress-controller-{{ plugins["nginx-ingress-controller"].version|minorversion }}.yaml.j2'
+        - python:
+            module: plugins/builtin.py
+            method: apply_yaml
+            arguments:
+              plugin_name: nginx-ingress-controller
         - expect:
             daemonsets:
               - name: ingress-nginx-controller
@@ -631,7 +614,11 @@ plugins:
     installation:
       priority: 2
       procedures:
-        - template: 'templates/plugins/dashboard-{{ plugins["kubernetes-dashboard"].version|minorversion }}.yaml.j2'
+        - python:
+            module: plugins/builtin.py
+            method: apply_yaml
+            arguments:
+              plugin_name: kubernetes-dashboard
         - expect:
             deployments:
               - name: kubernetes-dashboard
@@ -680,11 +667,16 @@ plugins:
                         number: 443
 
   local-path-provisioner:
+    version: '{{ globals.compatibility_map.software["local-path-provisioner"][services.kubeadm.kubernetesVersion|minorversion].version }}'
     install: false
     installation:
       priority: 2
       procedures:
-      - template: 'templates/plugins/local-path-provisioner.yaml.j2'
+      - python:
+          module: plugins/builtin.py
+          method: apply_yaml
+          arguments:
+            plugin_name: local-path-provisioner
       - expect:
           pods:
             - local-path-provisioner
@@ -692,7 +684,7 @@ plugins:
       name: local-path
       is-default: "false"
     volume-dir: /opt/local-path-provisioner
-    image: 'rancher/local-path-provisioner:{{ globals.compatibility_map.software["local-path-provisioner"][services.kubeadm.kubernetesVersion|minorversion].version }}'
+    image: 'rancher/local-path-provisioner:{{ plugins["local-path-provisioner"].version }}'
     helper-pod-image: 'library/busybox:{{ globals.compatibility_map.software["busybox"][services.kubeadm.kubernetesVersion|minorversion].version }}'
 
 rbac:
