--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -446,11 +446,11 @@ plugins:
             destination: /etc/calico/ippool.yaml
             apply_command: 'calicoctl apply -f /etc/calico/ippool.yaml'
         - template:
-            source: templates/plugins/calico-metrics.yaml.j2
+            source: templates/plugins/calico-metrics.yaml
             destination: /etc/calico/calico-metrics.yaml
             apply_command: 'kubectl apply -f /etc/calico/calico-metrics.yaml'
         - template:
-            source: templates/plugins/calico-kube-controllers-metrics.yaml.j2
+            source: templates/plugins/calico-kube-controllers-metrics.yaml
             destination: /etc/calico/calico-kube-controllers-metrics.yaml
             apply_command: 'kubectl apply -f /etc/calico/calico-kube-controllers-metrics.yaml'
         - template: 'templates/plugins/calico-rr.yaml.j2'
