--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -45,3 +45,16 @@ jobs:
       # Then uninstall only kubemarine to avoid ambiguity and to surely run pylint on sources.
       - run: pip install pylint . && pip uninstall -y kubemarine
       - run: pylint kubemarine test --disable fixme || exit 0
+  radon:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+      - run: pip install radon xenon
+        # Use `radon cc {paths} -a` locally for full report per function
+        # xenon checks, if radon absolute result is A
+      - run: |
+          radon cc kubemarine scripts -a
+          xenon -a A kubemarine scripts
