--- a/kubemarine/resources/configurations/defaults.yaml
+++ b/kubemarine/resources/configurations/defaults.yaml
@@ -142,12 +142,27 @@ services:
       userland-proxy: False
 
   modprobe:
-    - br_netfilter
-    - '{% if not nodes[0]["internal_address"]|isipv4 %}ip6table_filter{% endif %}'
-    - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_conntrack_ipv6{% endif %}'
-    - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_nat_masquerade_ipv6{% endif %}'
-    - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_reject_ipv6{% endif %}'
-    - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_defrag_ipv6{% endif %}'
+    rhel:
+      - br_netfilter
+      - '{% if not nodes[0]["internal_address"]|isipv4 %}ip6table_filter{% endif %}'
+      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_conntrack_ipv6{% endif %}'
+      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_nat_masquerade_ipv6{% endif %}'
+      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_reject_ipv6{% endif %}'
+      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_defrag_ipv6{% endif %}'
+    rhel8:
+      - br_netfilter
+      - '{% if not nodes[0]["internal_address"]|isipv4 %}ip6table_filter{% endif %}'
+      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_conntrack{% endif %}'
+      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_nat{% endif %}'
+      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_reject_ipv6{% endif %}'
+      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_defrag_ipv6{% endif %}'
+    debian:
+      - br_netfilter
+      - '{% if not nodes[0]["internal_address"]|isipv4 %}ip6table_filter{% endif %}'
+      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_conntrack{% endif %}'
+      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_nat{% endif %}'
+      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_reject_ipv6{% endif %}'
+      - '{% if not nodes[0]["internal_address"]|isipv4 %}nf_defrag_ipv6{% endif %}'
 
   sysctl:
     net.bridge.bridge-nf-call-iptables: 1
