--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -42,7 +42,7 @@ jobs:
             executable_path: 'dist\kubemarine.exe'
           - target: {os: ubuntu-latest, arch: 'linux-x86_64'}
             build_cmd: >
-              docker run -t -v $(pwd):/opt/app-root/src centos/python-38-centos7 bash -c
+              docker run -t -v $(pwd):/app bitnami/python:3.9.16 bash -c
               'python scripts/ci/build_binary.py'
           - target: {os: windows-2022, arch: 'win64'}
             build_cmd: python scripts/ci/build_binary.py
