--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -7,9 +7,9 @@ on:
 jobs:
   test-default-installation:
     runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        python-version: [ "3.9" ]
+    #strategy:
+    #  matrix:
+    #    python-version: [ "3.9" ]
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
@@ -22,10 +22,10 @@ jobs:
           ssh-keyscan -H 172.17.0.1 >> ~/.ssh/known_hosts
       - name: Test ssh connection
         run: ssh -i ~/.ssh/id_rsa 172.17.0.1 echo "Test"
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.9
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.9"
       - name: Install Kubemarine with dependencies
         run: |
           python -m pip install --upgrade pip
@@ -57,9 +57,6 @@ jobs:
 
   test-extended-installation:
     runs-on: ubuntu-22.04
-    strategy:
-      matrix:
-        python-version: [ "3.9" ]
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
@@ -74,10 +71,10 @@ jobs:
         run: sudo ifconfig docker0:0 172.17.1.1 up
       - name: Test ssh connection
         run: ssh -i ~/.ssh/id_rsa 172.17.0.1 echo "Test"
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: Set up Python 3.9
         uses: actions/setup-python@v4
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: "3.9"
       - name: Install Kubemarine with dependencies
         run: |
           python -m pip install --upgrade pip
