--- a/ci/default_cluster.yaml
+++ b/ci/default_cluster.yaml
@@ -9,3 +9,7 @@ nodes:
   roles: ["control-plane", "worker"]
 
 cluster_name: "test-local-k8s.com"
+
+services:
+  kubeadm:
+    kubernetesVersion: <KUBERNETES_VERSION>
