--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -10,6 +10,7 @@ jobs:
     env:
       cluster_yaml_file: ./ci/default_cluster.yaml
     strategy:
+      fail-fast: false
       matrix:
         kubernetes-version: [ "v1.21.5", "v1.24.11", "v1.26.3" ]
     steps:
