--- a/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
+++ b/kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml
@@ -76,3 +76,5 @@ v1.26.3:
   kubernetes-dashboard: v2.7.0
   local-path-provisioner: v0.0.23
   crictl: v1.25.0
+
+# After any change, please run scripts/thirdparties/sync.py
