--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -22,12 +22,13 @@ jobs:
 
   test-default-installation:
     runs-on: ubuntu-22.04
+    needs: collect_kubernetes_versions
     env:
       cluster_yaml_file: ./ci/default_cluster.yaml
     strategy:
       fail-fast: false
       matrix:
-        kubernetes-version: [ "v1.21.5", "v1.24.11", "v1.26.3" ]
+        kubernetes-version: ${{needs.collect_kubernetes_versions.outputs.kuber_versions}}
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
