--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-22.04
     needs: collect_kubernetes_versions
     steps:
-      - id: echo versions
+      - name: echo versions
         run: echo "${{ toJSON(needs.collect_kubernetes_versions.outputs) }}"
 
   test-default-installation:
