--- a/.github/workflows/test_install.yaml
+++ b/.github/workflows/test_install.yaml
@@ -29,7 +29,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        kubernetes-version: ${{ fromJSON(needs.say_hello.outputs.kuber_versions) }}
+        kubernetes-version: ${{ fromJSON(needs.collect_kubernetes_versions.outputs.kuber_versions) }}
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
