--- a/.github/workflows/integration_tests.yaml
+++ b/.github/workflows/integration_tests.yaml
@@ -142,7 +142,7 @@ jobs:
       - name: Install dependencies
         run: pip install . && pip uninstall -y kubemarine
       - name: Run scripts/thirdparties/sync.py
-        run: python scripts/thirdparties/sync.py --refresh-manifests --enrich-manifests
+        run: python scripts/thirdparties/sync.py --refresh-manifests
       - name: Check source code unchanged
         run: |
           if ! git diff --exit-code; then
