--- a/.github/workflows/integration_tests.yaml
+++ b/.github/workflows/integration_tests.yaml
@@ -1,4 +1,4 @@
-name: Test Installation
+name: Integration Tests
 on:
   push:
     branches:
@@ -21,8 +21,8 @@ jobs:
       - name: Parse kubernetes versions
         id: versions
         run: |
-          versions=$(cat ./kubemarine/resources/configurations/globals.yaml | \
-            python3 -m yq -c '.compatibility_map.software.kubeadm | keys')
+          versions=$(cat ./kubemarine/resources/configurations/compatibility/kubernetes_versions.yaml | \
+            python3 -m yq -c '.compatibility_map | keys')
           echo Parsed versions: $versions
           echo "kuber_versions=$versions" >> $GITHUB_OUTPUT
 
@@ -131,3 +131,23 @@ jobs:
           name: extended_cluster_procedure_dumps
           path: ./results/
           retention-days: 7
+
+  thirdparties_sync:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: "3.9"
+      - name: Install dependencies
+        run: pip install . && pip uninstall -y kubemarine
+      - name: Run scripts/thirdparties/sync.py
+        run: python scripts/thirdparties/sync.py --refresh-manifests
+      - name: Check source code unchanged
+        run: |
+          if ! git diff --exit-code; then
+            echo ""
+            echo -e "\033[91mkubernetes_versions.yaml may be not synchronized with internal compatibility maps, or plugin manifests. See diff above.\033[0m"
+            echo -e "\033[91mDo not change internal compatibility maps manually. Use scripts/thirdparties/sync.py to synchronize the compatibility maps.\033[0m"
+            exit 1
+          fi
