--- a/kubemarine/resources/configurations/compatibility/internal/packages.yaml
+++ b/kubemarine/resources/configurations/compatibility/internal/packages.yaml
@@ -1,6 +1,7 @@
 # This configuration is partially generated and maintained by "scripts/thirdparties/sync.py"
-# If new Kubernetes version is added, the compatibility mapping is inserted with fake "0.0.0" versions.
-# The developer should manually choose the required package versions.
+#
+# If new Kubernetes version is added, the compatibility mapping is taken from the previous Kubernetes versions.
+# The developer should manually change the required package versions if necessary.
 docker:
   v1.21.2:
     version_rhel: 19.03*
